fixed alignment and deleted row

--- a/models/webapp/modelssite/src/App.css
+++ b/models/webapp/modelssite/src/App.css
@@ -1,4 +1,4 @@
-.App {
+.centerAlign{
   text-align: center;
 }
 
